--- a/UFC_CodeBase/ufc_eda.ipynb
+++ b/UFC_CodeBase/ufc_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -232,13 +232,13 @@
        "[5 rows x 118 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ufc_masterdf = pd.read_csv('../datasets/ufc-master.csv')\n",
+    "ufc_masterdf = pd.read_csv('../datasets/raw/ufc-master.csv')\n",
     "ufc_masterdf.head()"
    ]
   },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "[6489 rows x 118 columns]>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
