Update spelling and comments

--- a/UFC_CodeBase/ufc_ml.ipynb
+++ b/UFC_CodeBase/ufc_ml.ipynb
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Paramaters"
+    "## Model Parameters"
    ]
   },
   {
@@ -895,14 +895,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clean up calcuated feature columns by checking for problematic values like infinity or extremely large values and replacing inf and -inf with NaN"
+    "Clean up calculated feature columns by checking for problematic values like infinity or extremely large values and replacing inf and -inf with 0"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Improved Model Assesment"
+    "## Improved Model Assessment"
    ]
   },
   {
